feat(style): add style to the topbar
Added style to the top bar by using flex layout, making it
flexible as long as you are on a pc.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="topbar">
-        <a href="#" id="logo">Flowerain</a>
+        <a href="#" class="logo">Flowerain</a>
 
         <div class="links-wrapper">
             <a class="link" href="#">Home</a>
