--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <a href="#" class="logo">Flowerain</a>
 
         <div class="links-wrapper">
-            <a class="link" href="#">Home</a>
-            <a class="link" href="#">About</a>
-            <a class="link" href="#">Contact</a>
-            <a class="link" href="#">Blog</a>
-            <a class="link" href="#">Open a PR</a>
+            <a class="top-link" href="#">About</a>
+            <a class="top-link" href="#">Pricing</a>
+            <a class="top-link" href="#">Contact</a>
+            <a class="top-link" href="#">Get in touch</a>
+            <a class="top-link" id="buy-flowers" href="#">Buy Flowers</a>
         </div>
     </div>
 
@@ -28,15 +28,53 @@
             <h2 class="subheader">We are the future</h2>
 
             <p class="para">We sell flowers, we gift emotions. Unique flowers of all types, genderless.
-                We share love and passion, while <a class="rickroll-link"
+                We share love and passion, while <a class="link"
                     href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
                     they</a> don't. We made more than 1.250 people happy, and now we are waiting you.
             </p>
 
             <button class="btn">Join us</button>
         </div>
+        <div class="img-container">
+            <img src="./images/our-flowers.jpg" width="540" height="300" alt="Flowerain's pink flower" class="hero-img">
+           
+            <p class="credits">Photo by <a class="link"
+                    href="https://unsplash.com/@frostroomhead?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Rodion
+                    Kutsaiev</a> on <a class="link"
+                    href="https://unsplash.com/photos/selective-focus-photography-of-pink-flower-JemKKIu-bQA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+            </p>
+        </div>
 
-        <img src="./images/flowers.jpg" width="540" height="300" alt="Flowerain's yellow flowers" class="hero-img">
+    </div>
+
+    <div class="card-section">
+        <h1 class="header-cards">Our amazing flowers</h1>
+
+        <div class="cards-wrapper">
+            <div class="card" id="hydrangea">
+                <!-- <p class="credits"> Photo by <a href="https://unsplash.com/@josefin?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Josefin</a> on <a href="https://unsplash.com/photos/blue-and-yellow-petaled-flowers-under-blue-sky-LvEOWMyr-Bc?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a> </p> -->
+                <img class="card-img" src="./images/hydrangea.jpg" width="200px" height="200px">
+                <p class="card-para">Boasts blooms that change color throughout the season</p>
+            </div>
+
+            <div class="card" id="magnolia">
+                <!-- <p class="credits"> Photo by <a href="https://unsplash.com/@josefin?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Josefin</a> on <a href="https://unsplash.com/photos/blue-and-yellow-petaled-flowers-under-blue-sky-LvEOWMyr-Bc?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a> </p> -->
+                <img class="card-img" src="./images/lavender.jpg" width="200px" height="200px">
+                <p class="card-para">Large, fragrant flowers announce spring's arrival</p>
+            </div>
+
+            <div class="card" id="lavender">
+                <!-- <p class="credits"> Photo by <a href="https://unsplash.com/@daiga_ellaby?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Daiga Ellaby</a> on <a href="https://unsplash.com/photos/tilt-shift-lens-pink-fetal-flowers-ClWvcrkBhMY?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a> </p> -->
+                <img class="card-img" src="./images/magnolia.jpg" width="200px" height="200px">
+                <p class="card-para">Fragrant purple blooms grace landscapes and soothe the mind</p>
+            </div>
+
+            <div class="card" id="saffron">
+                <!-- <p class="credits"> Photo by <a href="https://unsplash.com/@benyamin_bohlouli?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Benyamin Bohlouli</a> on <a href="https://unsplash.com/photos/purple-crocus-in-bloom-close-up-photo-GKHNCVWEXW8?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a> </p> -->
+                <img class="card-img" src="./images/saffron.jpg" width="200px" height="200px">
+                <p class="card-para">Delicate threads add a touch of luxury to any dish</p>
+            </div>
+        </div>
     </div>
 </body>
 
