feat(style): complete 2nd section styling
Added credits as inline block (can cause problems when shrinking window)
Images are centered, so no stretching. Can proceed to next section
Added borders and rounded corners + some spacing between elements
Could've used gap instead of margin to prevent overlapping when cards are close

--- a/index.html
+++ b/index.html
@@ -52,26 +52,26 @@
 
         <div class="cards-wrapper">
             <div class="card" id="hydrangea">
-                <!-- <p class="credits"> Photo by <a href="https://unsplash.com/@josefin?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Josefin</a> on <a href="https://unsplash.com/photos/blue-and-yellow-petaled-flowers-under-blue-sky-LvEOWMyr-Bc?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a> </p> -->
                 <img class="card-img" src="./images/hydrangea.jpg" width="200px" height="200px">
+                <p class="credits"> Photo by <a class="link" href="https://unsplash.com/@josefin?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Josefin</a> on <a class="link" href="https://unsplash.com/photos/blue-and-yellow-petaled-flowers-under-blue-sky-LvEOWMyr-Bc?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a> </p>
                 <p class="card-para">Boasts blooms that change color throughout the season</p>
             </div>
 
             <div class="card" id="magnolia">
-                <!-- <p class="credits"> Photo by <a href="https://unsplash.com/@josefin?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Josefin</a> on <a href="https://unsplash.com/photos/blue-and-yellow-petaled-flowers-under-blue-sky-LvEOWMyr-Bc?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a> </p> -->
                 <img class="card-img" src="./images/lavender.jpg" width="200px" height="200px">
+                <p class="credits"> Photo by <a class="link" href="https://unsplash.com/@daiga_ellaby?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Daiga Ellaby</a> on <a class="link" href="https://unsplash.com/photos/tilt-shift-lens-pink-fetal-flowers-ClWvcrkBhMY?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a> </p>
                 <p class="card-para">Large, fragrant flowers announce spring's arrival</p>
             </div>
 
             <div class="card" id="lavender">
-                <!-- <p class="credits"> Photo by <a href="https://unsplash.com/@daiga_ellaby?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Daiga Ellaby</a> on <a href="https://unsplash.com/photos/tilt-shift-lens-pink-fetal-flowers-ClWvcrkBhMY?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a> </p> -->
                 <img class="card-img" src="./images/magnolia.jpg" width="200px" height="200px">
+                <p class="credits"> Photo by <a class="link" href="https://unsplash.com/@daiga_ellaby?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Daiga Ellaby</a> on <a class="link" href="https://unsplash.com/photos/tilt-shift-lens-pink-fetal-flowers-ClWvcrkBhMY?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a> </p>
                 <p class="card-para">Fragrant purple blooms grace landscapes and soothe the mind</p>
             </div>
 
             <div class="card" id="saffron">
-                <!-- <p class="credits"> Photo by <a href="https://unsplash.com/@benyamin_bohlouli?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Benyamin Bohlouli</a> on <a href="https://unsplash.com/photos/purple-crocus-in-bloom-close-up-photo-GKHNCVWEXW8?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a> </p> -->
                 <img class="card-img" src="./images/saffron.jpg" width="200px" height="200px">
+                <p class="credits"> Photo by <a class="link" href="https://unsplash.com/@benyamin_bohlouli?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Ben Bohlouli</a> on <a class="link" href="https://unsplash.com/photos/purple-crocus-in-bloom-close-up-photo-GKHNCVWEXW8?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a> </p>
                 <p class="card-para">Delicate threads add a touch of luxury to any dish</p>
             </div>
         </div>
