feat(style): style banner
Completed styling the banner
Flexible enough

--- a/index.html
+++ b/index.html
@@ -86,7 +86,12 @@
 
     <div class="banner-section">
         <div class="banner">
-            <h1>Order today your lovely new flowers!</h1>
+            <div class="banner-content">
+                <h1 class="banner-header">Order today your lovely new flowers!</h1>
+                <p class="banner-description">Join into the waiting list. We'll contact you as soon as possible to see if you're eligible!</p>
+            </div>
+            
+            <button class="alt-btn">Sign up</button>
         </div>
     </div>
 </body>
