feat(section): create footer copyright section
Added & styled the footer containing a copyright message
No need to style further more

--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@
             <button class="alt-btn">Sign up</button>
         </div>
     </div>
+
+    <div class="footer-section">
+        <p class="copyright">
+            Copyright © Flowerain 2024
+        </p>
+    </div>
 </body>
 
 </html>
